# gusutfdocker

./: .gitignore  Makefile  README.md
edge/: .gitignore  downloader.sh
edge/estimater/: .gitignore  Makefile  builder.sh  intensity_cropper.cpp  main.cpp  main.py  predictor.sh  predictorc.sh  predictorpy.sh  runner.cpp
image/: Dockerfile
workspace/: .wget-hsts
workspace/mnist/: build_arm64.sh  build_armhf.sh  build_x86_64.sh  download_model.sh  main.cpp
workspace/mnist2/: .gitignore  download_model.sh  get_dataset.sh
workspace/mnist2/cpp/test1/: Makefile  main.cpp
workspace/mnist2/cpp/test2/: Makefile  main.cpp
workspace/mnist2/python/test1/: main.py
workspace/mnist2/python/test2/: README.md  test.py
workspace/mnist2/saver/: CMakeLists.txt  mnist.h  saver.cpp
